--- a/siamltexmm/homework4.tex
+++ b/siamltexmm/homework4.tex
@@ -57,9 +57,11 @@ I think the tutorial of Bag-of-words is very key to understand to last part of a
 Since I am useing kmeans++ as the base-method finding centroids and it's performance and accuracy will very affect out classification result, I have checked the code of MiniBatchKMeans, especially the method finding the initial centroids. In the method called \_init\_centroids, there is trick parameter init\_size, which is to lower down the number of samples to randomly sample for speeding up the initialization, but this will sometimes at the expense of accuracy. Also this method was also observed in \_k\_init that instead of the whole samples, it used n\_local\_trials (default: 2+log(k)) to do sampling. \_k\_init is the method used to get the init centers fro kmeans++, and seems there is also a trick that ckecking whether point space X is sparse, and make it toarray and get the specific point if X is sparse, otherwise just keep as it is to get the point (X[center\_id]). Also seem there is a faster way called pairwise.euclidean\_distances that can directly compute the distance matrix between each pair of vectors, and the advantage will be computationally efficient when dealing with sparse data.
 
 \section{Project}
-So here I have used the same learnvocabulary and getbof method that have been used previously and applied to very small set of our music data, so it's easiler to my testing purpose and easier to debug. So the small data set is 10 genres, and 8 songs per genre. In notebook kmeans\_music.ipynb, I used MultinomialNB as my classifier and the fit and training process went well, but got 0 prediction score. Then in KNeighborsClassifier\_music.ipynb I used KNeighborsClassifier combined with grid\_search to train the classifier. The best parameter for n\_neighbors: 6, weights: distance, and algorithm: auto. Then the prediction score I got is 0.2 which is better than MultinomialNB. The phenenome is also observed in my notebook BagWordsTutorial.ipynb that SVM has better prediction than MultinomialNB. Below are the experiments that I would like to test
-\\ 1. The effect if I reuse the same data for training classifier
-\\ 2. The effect transpose the data point
+So here I have used the same learnvocabulary and getbof method that have been used previously and applied to very small set of our music data, so it's easiler to my testing purpose and easier to debug. So the small data set is 10 genres, and 8 songs per genre. In notebook kmeans\_music.ipynb, I used MultinomialNB as my classifier and the fit and training process went well, but got 0 prediction score. Then in KNeighborsClassifier\_music.ipynb I used KNeighborsClassifier combined with grid\_search to train the classifier. The best parameter for n\_neighbors: 6, weights: distance, and algorithm: auto. Then the prediction score I got is 0.2 which is better than MultinomialNB. The phenenome is also observed in my notebook BagWordsTutorial.ipynb that SVM has better prediction than MultinomialNB. Below are the experiments that I would like to test, but since it is like a back and forth between experiment and code optimization. So although sometime I feel strong insterest in some question but then I made the data size become too big, and have to go back to improve code efficiency or play tricks. Therefore, not all the experiment can be done at this point, but here listed my interests that I am trying to do:
+\\ 0. The effect if I used different classifier. So if I use the same condition, KNeighborsClassifier and Naive Bayes can give me 23\% and 7\% or accuracy respectively. Please note, here I am only using very few data 2+2 training set and 2 test set, 20 cluster, and only 30 iterations. So I believe as I shift the testing onto hpc running bigger data set, then I should be able to get better results.
+\\ 1. The effect if I used different window size for the clips. So here I change the window size from 2.48s to 0.44s, and all other condition is just the experiment number0. The the accuracy for KNeighborsClassifier and Naive Bayes dropped to 11.5\% and 6\% respectively. Although not have done the test whether bigger window will definitely gives a better prediction, but 0.44s might just too few and might not be representative enough for the song, and therefore the accuracy dropped.
+\\ 2. The effect if I reuse the same data for training classifier. This step is using the same condition as experiment number1, and I just reused the same training set that used for finding centroids to train my classifier. Not sure whether it's a occation thing, but prediction for KNeighborsClassifier actually improved from 11.5\% to 18.5\%, but Naive Bayes dropped from 6\% to 0\%. But I guess this might be just occation thing especially I only using very small window size and low learnvocabulary iteration, so I think we should better not use the data in case over-fitting and prediction drop to 0.
+\\ 3. The effect transpose the data point. This is actually the experiment that most insterested me. I always wondering what should be the point spreading in the space so we can find the centroid to reprent the uniqueness of the song. So all the points in the experiment above are each of the time vector over each mfcc, and the length of that vector corresponds to the window size. So the purpose of this experiment is to test if I transpose the point and now the point is the mfcc vector over each of time, and the size of the vector is the number of mfcc. I am crious whether the centroids found by this transformation will be more representive and gives a better prediction. Then the same parameters as experiment number1, the scored were changed from 11.5\% to 12.5\% for KNeighborsClassifier and significant changed from 7\% to 18\%. So spreading the point over the dimension of number mfcc might be a better option. However, this transpose will expose the issue that my code is not efficient enough, and maybe I should implement the n\_local\_trials in my code.
 
 
 
